PP-12355: Refactor test
The only purpose of this commit is to avoid making a PR hard to review when we
introduce tests for PATCHing by service id and account type